# TgParser

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.vibe/: .window-lock.json  README.md  agent-locks.json  allowed-models.json  commands.json  constraints.json  goals.md  ignore  pinned.json  rules.md
.vibe/rules/: dev-engine.mdc  knowledge.mdc  release.mdc  roadmap.mdc  versioning.mdc
.vibe/skills/: README.md
.vibe/skills/example/: SKILL.md
.vibe/skills/implement-specs/: SKILL.md
.vibe/skills/resolve-merge-conflicts/: SKILL.md
.vibe/skills/spec-driven-implementation/: SKILL.md
.vibe/skills/update-skill/: SKILL.md
.vibe/skills/write-product-spec/: SKILL.md
.vibe/skills/write-tech-spec/: SKILL.md
.vibe/workflows/: example.json
docs/: idea.md  product.md  roadmap.md  tech.md
scripts/: README.md  check_imports.py  dump_defs.py  explore_a.py  explore_k.py  find_init.py  find_paths.py  gen_gui.py  test_incremental.py  test_login_a.py  test_parse.py
src/tgparser/: __init__.py  cli.py  config.py  utils.py
src/tgparser/auth/: __init__.py  mtproto_auth.py  web_auth.py
src/tgparser/gui/: __init__.py  __main__.py  _win32_hash_patch.py  app.py
src/tgparser/models/: __init__.py  message.py
src/tgparser/parsers/: __init__.py  mtproto_parser.py  web_parser.py
src/tgparser/storage/: __init__.py  sqlite.py  writer.py
tests/: test_cli_storage.py  test_config.py  test_gui_integration.py  test_gui_smoke.py  test_input_hash.py  test_input_hash_real.py  test_mtproto_auth.py  test_mtproto_parser.py  test_sqlite.py  test_utils.py  test_web_auth.py  test_web_parser.py  test_win32_hash_patch.py  test_writer.py
(+9 files in other folders)
